// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroCardApp — schema-driven render per type > renders the insight variant from structuredContent + schema with no widget code changes 1`] = `
<div
  class="p-3"
>
  <a
    class="group block max-w-[540px] no-underline text-foreground"
    href="https://maskin.test/ws-1/objects/insight-7"
    rel="noreferrer"
    target="_blank"
  >
    <article
      class="flex flex-col gap-2.5 px-4 py-3.5 bg-card border border-border rounded-[10px] max-w-[540px] transition-colors hover:border-border-hover"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center justify-center w-3.5 h-3.5 rounded-sm bg-primary text-primary-foreground text-[9px] leading-none font-bold shrink-0"
        >
          M
        </div>
        <span
          class="font-mono text-[11px] text-muted-foreground lowercase"
        >
          Insight
        </span>
        <div
          class="flex-1"
        />
        <span
          class="text-[10.5px] px-1.5 py-0.5 rounded-full font-medium bg-muted text-muted-foreground"
        >
          clustered
        </span>
      </div>
      <h3
        class="text-[15px] font-semibold leading-snug text-foreground m-0 line-clamp-1"
      >
        Pricing pain
      </h3>
      <p
        class="text-[13px] text-muted-foreground leading-relaxed m-0 line-clamp-1"
      >
        clustered · anchor #3+#6 · 4 sources
      </p>
      <div
        class="flex items-center gap-2.5 pt-2 border-t border-border mt-0.5"
      >
        <span
          class="ml-auto inline-flex items-center gap-1.5 text-xs font-medium text-foreground px-2.5 py-1 rounded-md bg-transparent border border-border group-hover:bg-muted group-hover:border-border-hover transition-colors min-h-[28px]"
        >
          Open in Maskin
          <svg
            class="lucide lucide-external-link size-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
        </span>
      </div>
    </article>
  </a>
</div>
`;

exports[`HeroCardApp — schema-driven render per type > renders the task variant from structuredContent + schema with no widget code changes 1`] = `
<div
  class="p-3"
>
  <a
    class="group block max-w-[540px] no-underline text-foreground"
    href="https://maskin.test/ws-1/objects/task-9"
    rel="noreferrer"
    target="_blank"
  >
    <article
      class="flex flex-col gap-2.5 px-4 py-3.5 bg-card border border-border rounded-[10px] max-w-[540px] transition-colors hover:border-border-hover"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center justify-center w-3.5 h-3.5 rounded-sm bg-primary text-primary-foreground text-[9px] leading-none font-bold shrink-0"
        >
          M
        </div>
        <span
          class="font-mono text-[11px] text-muted-foreground lowercase"
        >
          Task
        </span>
        <div
          class="flex-1"
        />
        <span
          class="text-[10.5px] px-1.5 py-0.5 rounded-full font-medium bg-muted text-muted-foreground"
        >
          in_progress
        </span>
      </div>
      <h3
        class="text-[15px] font-semibold leading-snug text-foreground m-0 line-clamp-1"
      >
        Write tests
      </h3>
      <p
        class="text-[13px] text-muted-foreground leading-relaxed m-0 line-clamp-1"
      >
        in_progress · owner Magnus
      </p>
      <div
        class="flex items-center gap-2.5 pt-2 border-t border-border mt-0.5"
      >
        <span
          class="text-[11.5px] text-muted-foreground tabular-nums"
        >
          Owner: 
          Magnus
        </span>
        <span
          class="ml-auto inline-flex items-center gap-1.5 text-xs font-medium text-foreground px-2.5 py-1 rounded-md bg-transparent border border-border group-hover:bg-muted group-hover:border-border-hover transition-colors min-h-[28px]"
        >
          Open in Maskin
          <svg
            class="lucide lucide-external-link size-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
        </span>
      </div>
    </article>
  </a>
</div>
`;

exports[`HeroCardApp — schema-driven render per type > renders the trigger variant from structuredContent + schema with no widget code changes 1`] = `
<div
  class="p-3"
>
  <a
    class="group block max-w-[540px] no-underline text-foreground"
    href="https://maskin.test/ws-1/triggers/trig-1"
    rel="noreferrer"
    target="_blank"
  >
    <article
      class="flex flex-col gap-2.5 px-4 py-3.5 bg-card border border-border rounded-[10px] max-w-[540px] transition-colors hover:border-border-hover"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex items-center justify-center w-3.5 h-3.5 rounded-sm bg-primary text-primary-foreground text-[9px] leading-none font-bold shrink-0"
        >
          M
        </div>
        <span
          class="font-mono text-[11px] text-muted-foreground lowercase"
        >
          Trigger
        </span>
        <div
          class="flex-1"
        />
        <span
          class="text-[10.5px] px-1.5 py-0.5 rounded-full font-medium bg-muted text-muted-foreground"
        >
          enabled
        </span>
      </div>
      <h3
        class="text-[15px] font-semibold leading-snug text-foreground m-0 line-clamp-1"
      >
        Nightly sweep
      </h3>
      <p
        class="text-[13px] text-muted-foreground leading-relaxed m-0 line-clamp-1"
      >
        enabled · 0 0 * * * (UTC) · next in 6h
      </p>
      <div
        class="flex items-center gap-2.5 pt-2 border-t border-border mt-0.5"
      >
        <span
          class="text-[11.5px] text-muted-foreground tabular-nums"
        >
          Owner: 
          Observer
        </span>
        <span
          class="ml-auto inline-flex items-center gap-1.5 text-xs font-medium text-foreground px-2.5 py-1 rounded-md bg-transparent border border-border group-hover:bg-muted group-hover:border-border-hover transition-colors min-h-[28px]"
        >
          Open in Maskin
          <svg
            class="lucide lucide-external-link size-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
        </span>
      </div>
    </article>
  </a>
</div>
`;
